# psych-cert-automator

./: .gitignore  AGENTS.md  PLAN.md  README.md  certgen.py  components.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.opencode/: opencode.json
e2e/: README.md  playwright.config.ts  wizard.spec.ts
src/: __init__.py  pipeline.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/backends/: __init__.py  main.py  routes.py  schemas.py
src/generator/: __init__.py  certificate.py  report.py
src/matcher/: __init__.py  name_matcher.py
src/models/: __init__.py  certificate.py  participant.py  session.py  training.py
src/parser/: __init__.py  qualtrics.py  zoom.py
src/validator/: __init__.py  attendance.py
tests/: test_attendance_validator.py  test_backend_contracts.py  test_certificate_security.py  test_name_matcher.py  test_qualtrics_parser.py  test_zoom_parser.py
tests/fixtures/: sample_qualtrics.xlsx  sample_zoom.xlsx
ui/: index.html
ui/src/: App.tsx  index.css
ui/src/components/: PdfPreview.tsx  StartupScreen.tsx  StepGenerate.tsx  StepMatchReview.tsx  StepMetadata.tsx  StepUpload.tsx
ui/src/components/ui/: select.tsx
