[package]
name = "psych-cert-app"
version = "0.1.0"
description = "Psych Cert Gen - CE Certificate Automator"
authors = ["GSAPP Psychology Department"]
edition = "2021"

[lib]
name = "psych_cert_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
tokio = { version = "1", features = ["time"] }

